{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 125,
  "lineage": "6c41e15f-b6b6-be69-7826-9eb87256398e",
  "resources": [
    {
      "module": "module.wandb.module.app_lb",
      "mode": "managed",
      "type": "google_compute_global_address",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "34.36.110.183",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2024-07-16T10:17:33.602-07:00",
            "id": "projects/playground-111/global/addresses/abe-andb-address",
            "name": "abe-andb-address",
            "prefix_length": 0,
            "project": "playground-111",
            "self_link": "https://www.googleapis.com/compute/v1/projects/playground-111/global/addresses/abe-andb-address"
          },
          "dependencies": [
            "module.wandb.module.app_gke.google_container_cluster.default",
            "module.wandb.module.app_gke.google_container_node_pool.default",
            "module.wandb.module.app_gke.random_pet.node_pool",
            "module.wandb.module.networking.google_compute_network.vpc",
            "module.wandb.module.networking.google_compute_subnetwork.default",
            "module.wandb.module.project_factory_project_services.data.google_compute_default_service_account.default",
            "module.wandb.module.project_factory_project_services.google_project_iam_member.project_service_identity_roles",
            "module.wandb.module.project_factory_project_services.google_project_service.project_services",
            "module.wandb.module.project_factory_project_services.google_project_service_identity.project_service_identities",
            "module.wandb.module.service_accounts.google_service_account.main",
            "module.wandb.module.service_accounts.random_id.main"
          ]
        }
      ]
    },
    {
      "module": "module.wandb.module.app_lb",
      "mode": "managed",
      "type": "google_compute_global_address",
      "name": "operator",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "34.54.242.120",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2024-07-16T10:17:33.661-07:00",
            "id": "projects/playground-111/global/addresses/abe-andb-operator-address",
            "name": "abe-andb-operator-address",
            "prefix_length": 0,
            "project": "playground-111",
            "self_link": "https://www.googleapis.com/compute/v1/projects/playground-111/global/addresses/abe-andb-operator-address"
          },
          "dependencies": [
            "module.wandb.module.app_gke.google_container_cluster.default",
            "module.wandb.module.app_gke.google_container_node_pool.default",
            "module.wandb.module.app_gke.random_pet.node_pool",
            "module.wandb.module.networking.google_compute_network.vpc",
            "module.wandb.module.networking.google_compute_subnetwork.default",
            "module.wandb.module.project_factory_project_services.data.google_compute_default_service_account.default",
            "module.wandb.module.project_factory_project_services.google_project_iam_member.project_service_identity_roles",
            "module.wandb.module.project_factory_project_services.google_project_service.project_services",
            "module.wandb.module.project_factory_project_services.google_project_service_identity.project_service_identities",
            "module.wandb.module.service_accounts.google_service_account.main",
            "module.wandb.module.service_accounts.random_id.main"
          ]
        }
      ]
    },
    {
      "module": "module.wandb.module.app_lb.module.https[0]",
      "mode": "managed",
      "type": "google_compute_global_forwarding_rule",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "projects/playground-111/global/forwardingRules/abe-andb-https",
            "ip_address": "34.36.110.183",
            "ip_protocol": "TCP",
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "EXTERNAL",
            "name": "abe-andb-https",
            "port_range": "443-443",
            "project": "playground-111",
            "self_link": "https://www.googleapis.com/compute/v1/projects/playground-111/global/forwardingRules/abe-andb-https",
            "target": "https://www.googleapis.com/compute/v1/projects/playground-111/global/targetHttpsProxies/abe-andb-https-proxy"
          },
          "dependencies": [
            "module.wandb.module.app_gke.google_container_cluster.default",
            "module.wandb.module.app_gke.google_container_node_pool.default",
            "module.wandb.module.app_gke.random_pet.node_pool",
            "module.wandb.module.app_lb.google_compute_global_address.default",
            "module.wandb.module.app_lb.module.https.google_compute_managed_ssl_certificate.default",
            "module.wandb.module.app_lb.module.https.google_compute_ssl_policy.default",
            "module.wandb.module.app_lb.module.https.google_compute_target_https_proxy.default",
            "module.wandb.module.app_lb.module.https.random_pet.cert",
            "module.wandb.module.app_lb.module.url_map.google_compute_backend_service.default",
            "module.wandb.module.app_lb.module.url_map.google_compute_health_check.gke_ingress",
            "module.wandb.module.app_lb.module.url_map.google_compute_security_policy.default",
            "module.wandb.module.app_lb.module.url_map.google_compute_url_map.default",
            "module.wandb.module.networking.google_compute_network.vpc",
            "module.wandb.module.networking.google_compute_subnetwork.default",
            "module.wandb.module.project_factory_project_services.data.google_compute_default_service_account.default",
            "module.wandb.module.project_factory_project_services.google_project_iam_member.project_service_identity_roles",
            "module.wandb.module.project_factory_project_services.google_project_service.project_services",
            "module.wandb.module.project_factory_project_services.google_project_service_identity.project_service_identities",
            "module.wandb.module.service_accounts.google_service_account.main",
            "module.wandb.module.service_accounts.random_id.main"
          ]
        }
      ]
    },
    {
      "module": "module.wandb.module.app_lb.module.https[0]",
      "mode": "managed",
      "type": "google_compute_target_https_proxy",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2024-07-16T10:18:49.970-07:00",
            "http_keep_alive_timeout_sec": 0,
            "id": "projects/playground-111/global/targetHttpsProxies/abe-andb-https-proxy",
            "name": "abe-andb-https-proxy",
            "project": "playground-111",
            "proxy_bind": false,
            "proxy_id": 3163974415733691798,
            "quic_override": "NONE",
            "self_link": "https://www.googleapis.com/compute/v1/projects/playground-111/global/targetHttpsProxies/abe-andb-https-proxy",
            "ssl_certificates": [
              "https://www.googleapis.com/compute/v1/projects/playground-111/global/sslCertificates/abe-andb-cert-pleasing-primate"
            ],
            "ssl_policy": "https://www.googleapis.com/compute/v1/projects/playground-111/global/sslPolicies/abe-andb-ssl-policy",
            "url_map": "https://www.googleapis.com/compute/v1/projects/playground-111/global/urlMaps/abe-andb-urlmap"
          },
          "dependencies": [
            "module.wandb.module.app_gke.google_container_cluster.default",
            "module.wandb.module.app_gke.google_container_node_pool.default",
            "module.wandb.module.app_gke.random_pet.node_pool",
            "module.wandb.module.app_lb.module.https.google_compute_managed_ssl_certificate.default",
            "module.wandb.module.app_lb.module.https.google_compute_ssl_policy.default",
            "module.wandb.module.app_lb.module.https.random_pet.cert",
            "module.wandb.module.app_lb.module.url_map.google_compute_backend_service.default",
            "module.wandb.module.app_lb.module.url_map.google_compute_health_check.gke_ingress",
            "module.wandb.module.app_lb.module.url_map.google_compute_security_policy.default",
            "module.wandb.module.app_lb.module.url_map.google_compute_url_map.default",
            "module.wandb.module.networking.google_compute_network.vpc",
            "module.wandb.module.networking.google_compute_subnetwork.default",
            "module.wandb.module.project_factory_project_services.data.google_compute_default_service_account.default",
            "module.wandb.module.project_factory_project_services.google_project_iam_member.project_service_identity_roles",
            "module.wandb.module.project_factory_project_services.google_project_service.project_services",
            "module.wandb.module.project_factory_project_services.google_project_service_identity.project_service_identities",
            "module.wandb.module.service_accounts.google_service_account.main",
            "module.wandb.module.service_accounts.random_id.main"
          ]
        }
      ]
    },
    {
      "module": "module.wandb.module.app_lb.module.https[0]",
      "mode": "managed",
      "type": "google_compute_url_map",
      "name": "redirect_to_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2024-07-16T10:17:33.622-07:00",
            "default_route_action": [],
            "default_service": "",
            "default_url_redirect": [
              {
                "host_redirect": "",
                "https_redirect": true,
                "path_redirect": "",
                "prefix_redirect": "",
                "redirect_response_code": "MOVED_PERMANENTLY_DEFAULT",
                "strip_query": false
              }
            ],
            "description": "",
            "fingerprint": "5IWSewyMjeo=",
            "header_action": [],
            "host_rule": [],
            "id": "projects/playground-111/global/urlMaps/abe-andb-https-redirect",
            "map_id": 610390095089571266,
            "name": "abe-andb-https-redirect",
            "path_matcher": [],
            "project": "playground-111",
            "self_link": "https://www.googleapis.com/compute/v1/projects/playground-111/global/urlMaps/abe-andb-https-redirect",
            "test": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.wandb.module.app_gke.google_container_cluster.default",
            "module.wandb.module.app_gke.google_container_node_pool.default",
            "module.wandb.module.app_gke.random_pet.node_pool",
            "module.wandb.module.networking.google_compute_network.vpc",
            "module.wandb.module.networking.google_compute_subnetwork.default",
            "module.wandb.module.project_factory_project_services.data.google_compute_default_service_account.default",
            "module.wandb.module.project_factory_project_services.google_project_iam_member.project_service_identity_roles",
            "module.wandb.module.project_factory_project_services.google_project_service.project_services",
            "module.wandb.module.project_factory_project_services.google_project_service_identity.project_service_identities",
            "module.wandb.module.service_accounts.google_service_account.main",
            "module.wandb.module.service_accounts.random_id.main"
          ]
        }
      ]
    },
    {
      "module": "module.wandb.module.app_lb.module.https[0].module.http",
      "mode": "managed",
      "type": "google_compute_global_forwarding_rule",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "projects/playground-111/global/forwardingRules/abe-andb-http",
            "ip_address": "34.36.110.183",
            "ip_protocol": "TCP",
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "EXTERNAL",
            "name": "abe-andb-http",
            "port_range": "80-80",
            "project": "playground-111",
            "self_link": "https://www.googleapis.com/compute/v1/projects/playground-111/global/forwardingRules/abe-andb-http",
            "target": "https://www.googleapis.com/compute/v1/projects/playground-111/global/targetHttpProxies/abe-andb-http-proxy"
          },
          "dependencies": [
            "module.wandb.module.app_gke.google_container_cluster.default",
            "module.wandb.module.app_gke.google_container_node_pool.default",
            "module.wandb.module.app_gke.random_pet.node_pool",
            "module.wandb.module.app_lb.google_compute_global_address.default",
            "module.wandb.module.app_lb.module.https.google_compute_url_map.redirect_to_https",
            "module.wandb.module.app_lb.module.https.module.http.google_compute_target_http_proxy.default",
            "module.wandb.module.networking.google_compute_network.vpc",
            "module.wandb.module.networking.google_compute_subnetwork.default",
            "module.wandb.module.project_factory_project_services.data.google_compute_default_service_account.default",
            "module.wandb.module.project_factory_project_services.google_project_iam_member.project_service_identity_roles",
            "module.wandb.module.project_factory_project_services.google_project_service.project_services",
            "module.wandb.module.project_factory_project_services.google_project_service_identity.project_service_identities",
            "module.wandb.module.service_accounts.google_service_account.main",
            "module.wandb.module.service_accounts.random_id.main"
          ]
        }
      ]
    },
    {
      "module": "module.wandb.module.app_lb.module.https[0].module.http",
      "mode": "managed",
      "type": "google_compute_target_http_proxy",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2024-07-16T10:17:45.456-07:00",
            "http_keep_alive_timeout_sec": 0,
            "id": "projects/playground-111/global/targetHttpProxies/abe-andb-http-proxy",
            "name": "abe-andb-http-proxy",
            "project": "playground-111",
            "proxy_bind": false,
            "proxy_id": 7908592038499259862,
            "self_link": "https://www.googleapis.com/compute/v1/projects/playground-111/global/targetHttpProxies/abe-andb-http-proxy",
            "url_map": "https://www.googleapis.com/compute/v1/projects/playground-111/global/urlMaps/abe-andb-https-redirect"
          },
          "dependencies": [
            "module.wandb.module.app_gke.google_container_cluster.default",
            "module.wandb.module.app_gke.google_container_node_pool.default",
            "module.wandb.module.app_gke.random_pet.node_pool",
            "module.wandb.module.app_lb.module.https.google_compute_url_map.redirect_to_https",
            "module.wandb.module.networking.google_compute_network.vpc",
            "module.wandb.module.networking.google_compute_subnetwork.default",
            "module.wandb.module.project_factory_project_services.data.google_compute_default_service_account.default",
            "module.wandb.module.project_factory_project_services.google_project_iam_member.project_service_identity_roles",
            "module.wandb.module.project_factory_project_services.google_project_service.project_services",
            "module.wandb.module.project_factory_project_services.google_project_service_identity.project_service_identities",
            "module.wandb.module.service_accounts.google_service_account.main",
            "module.wandb.module.service_accounts.random_id.main"
          ]
        }
      ]
    },
    {
      "module": "module.wandb.module.app_lb.module.url_map",
      "mode": "managed",
      "type": "google_compute_backend_service",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "affinity_cookie_ttl_sec": 0,
            "backend": [
              {
                "balancing_mode": "UTILIZATION",
                "capacity_scaler": 1,
                "group": "https://www.googleapis.com/compute/v1/projects/playground-111/zones/us-central1-c/instanceGroups/gke-abe-andb-cluster-default-pool-gro-49b98ec5-grp",
                "max_connections": 0,
                "max_connections_per_endpoint": 0,
                "max_connections_per_instance": 0,
                "max_rate": 0,
                "max_rate_per_endpoint": 0,
                "max_rate_per_instance": 0,
                "max_utilization": 0
              }
            ],
            "connection_draining_timeout_sec": 300,
            "creation_timestamp": "2024-07-16T10:17:45.670-07:00",
            "enable_cdn": false,
            "fingerprint": "G2aw3S_-wCc=",
            "generated_id": 1278901398229685718,
            "health_checks": [
              "https://www.googleapis.com/compute/v1/projects/playground-111/global/healthChecks/abe-andb-hc-gke-ingress"
            ],
            "id": "projects/playground-111/global/backendServices/abe-andb-gke-ingress",
            "load_balancing_scheme": "EXTERNAL",
            "log_config": [
              {
                "enable": true,
                "sample_rate": 1
              }
            ],
            "name": "abe-andb-gke-ingress",
            "port_name": "abe-andb-local-port",
            "project": "playground-111",
            "protocol": "HTTP",
            "security_policy": "https://www.googleapis.com/compute/v1/projects/playground-111/global/securityPolicies/abe-andb",
            "self_link": "https://www.googleapis.com/compute/v1/projects/playground-111/global/backendServices/abe-andb-gke-ingress",
            "session_affinity": "NONE",
            "timeout_sec": 90
          },
          "dependencies": [
            "module.wandb.module.app_gke.google_container_cluster.default",
            "module.wandb.module.app_gke.google_container_node_pool.default",
            "module.wandb.module.app_gke.random_pet.node_pool",
            "module.wandb.module.app_lb.module.url_map.google_compute_health_check.gke_ingress",
            "module.wandb.module.app_lb.module.url_map.google_compute_security_policy.default",
            "module.wandb.module.networking.google_compute_network.vpc",
            "module.wandb.module.networking.google_compute_subnetwork.default",
            "module.wandb.module.project_factory_project_services.data.google_compute_default_service_account.default",
            "module.wandb.module.project_factory_project_services.google_project_iam_member.project_service_identity_roles",
            "module.wandb.module.project_factory_project_services.google_project_service.project_services",
            "module.wandb.module.project_factory_project_services.google_project_service_identity.project_service_identities",
            "module.wandb.module.service_accounts.google_service_account.main",
            "module.wandb.module.service_accounts.random_id.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.wandb.module.app_lb.module.url_map",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "hc",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "32543"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2024-07-16T10:17:33.643-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/playground-111/global/firewalls/abe-andb-hc",
            "log_config": [],
            "name": "abe-andb-hc",
            "network": "https://www.googleapis.com/compute/v1/projects/playground-111/global/networks/abe-andb-vpc",
            "priority": 5,
            "project": "playground-111",
            "self_link": "https://www.googleapis.com/compute/v1/projects/playground-111/global/firewalls/abe-andb-hc",
            "source_ranges": [
              "130.211.0.0/22",
              "35.191.0.0/16"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.wandb.module.app_gke.google_container_cluster.default",
            "module.wandb.module.app_gke.google_container_node_pool.default",
            "module.wandb.module.app_gke.random_pet.node_pool",
            "module.wandb.module.networking.google_compute_network.vpc",
            "module.wandb.module.networking.google_compute_subnetwork.default",
            "module.wandb.module.project_factory_project_services.data.google_compute_default_service_account.default",
            "module.wandb.module.project_factory_project_services.google_project_iam_member.project_service_identity_roles",
            "module.wandb.module.project_factory_project_services.google_project_service.project_services",
            "module.wandb.module.project_factory_project_services.google_project_service_identity.project_service_identities",
            "module.wandb.module.service_accounts.google_service_account.main",
            "module.wandb.module.service_accounts.random_id.main"
          ]
        }
      ]
    },
    {
      "module": "module.wandb.module.app_lb.module.url_map",
      "mode": "managed",
      "type": "google_compute_security_policy",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "adaptive_protection_config": [],
            "advanced_options_config": [],
            "description": "",
            "fingerprint": "bkdZUzGEsDc=",
            "id": "projects/playground-111/global/securityPolicies/abe-andb",
            "name": "abe-andb",
            "project": "playground-111",
            "recaptcha_options_config": [],
            "rule": [
              {
                "action": "allow",
                "description": "allow list rule",
                "header_action": [],
                "match": [
                  {
                    "config": [
                      {
                        "src_ip_ranges": [
                          "*"
                        ]
                      }
                    ],
                    "expr": [],
                    "versioned_expr": "SRC_IPS_V1"
                  }
                ],
                "preview": false,
                "priority": 1,
                "rate_limit_options": [],
                "redirect_options": []
              },
              {
                "action": "deny(403)",
                "description": "Deny access to all IPs",
                "header_action": [],
                "match": [
                  {
                    "config": [
                      {
                        "src_ip_ranges": [
                          "*"
                        ]
                      }
                    ],
                    "expr": [],
                    "versioned_expr": "SRC_IPS_V1"
                  }
                ],
                "preview": false,
                "priority": 2147483647,
                "rate_limit_options": [],
                "redirect_options": []
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/playground-111/global/securityPolicies/abe-andb",
            "timeouts": null,
            "type": "CLOUD_ARMOR"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.wandb.module.app_gke.google_container_cluster.default",
            "module.wandb.module.app_gke.google_container_node_pool.default",
            "module.wandb.module.app_gke.random_pet.node_pool",
            "module.wandb.module.networking.google_compute_network.vpc",
            "module.wandb.module.networking.google_compute_subnetwork.default",
            "module.wandb.module.project_factory_project_services.data.google_compute_default_service_account.default",
            "module.wandb.module.project_factory_project_services.google_project_iam_member.project_service_identity_roles",
            "module.wandb.module.project_factory_project_services.google_project_service.project_services",
            "module.wandb.module.project_factory_project_services.google_project_service_identity.project_service_identities",
            "module.wandb.module.service_accounts.google_service_account.main",
            "module.wandb.module.service_accounts.random_id.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.wandb.module.app_lb.module.url_map",
      "mode": "managed",
      "type": "google_compute_url_map",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2024-07-16T10:18:38.764-07:00",
            "default_route_action": [],
            "default_service": "https://www.googleapis.com/compute/v1/projects/playground-111/global/backendServices/abe-andb-gke-ingress",
            "default_url_redirect": [],
            "description": "",
            "fingerprint": "O_mBattv4iI=",
            "header_action": [],
            "host_rule": [],
            "id": "projects/playground-111/global/urlMaps/abe-andb-urlmap",
            "map_id": 2224234991548306817,
            "name": "abe-andb-urlmap",
            "path_matcher": [],
            "project": "playground-111",
            "self_link": "https://www.googleapis.com/compute/v1/projects/playground-111/global/urlMaps/abe-andb-urlmap",
            "test": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.wandb.module.app_gke.google_container_cluster.default",
            "module.wandb.module.app_gke.google_container_node_pool.default",
            "module.wandb.module.app_gke.random_pet.node_pool",
            "module.wandb.module.app_lb.module.url_map.google_compute_backend_service.default",
            "module.wandb.module.app_lb.module.url_map.google_compute_health_check.gke_ingress",
            "module.wandb.module.app_lb.module.url_map.google_compute_security_policy.default",
            "module.wandb.module.networking.google_compute_network.vpc",
            "module.wandb.module.networking.google_compute_subnetwork.default",
            "module.wandb.module.project_factory_project_services.data.google_compute_default_service_account.default",
            "module.wandb.module.project_factory_project_services.google_project_iam_member.project_service_identity_roles",
            "module.wandb.module.project_factory_project_services.google_project_service.project_services",
            "module.wandb.module.project_factory_project_services.google_project_service_identity.project_service_identities",
            "module.wandb.module.service_accounts.google_service_account.main",
            "module.wandb.module.service_accounts.random_id.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.wandb.module.gke_app",
      "mode": "managed",
      "type": "kubernetes_service",
      "name": "prometheus",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "id": "default/prometheus",
            "metadata": [
              {
                "generation": 0,
                "name": "prometheus",
                "namespace": "default",
                "resource_version": "59323",
                "uid": "2b6cd7aa-c8d5-46ff-803a-3d2b1ed326d2"
              }
            ],
            "spec": [
              {
                "allocate_load_balancer_node_ports": true,
                "cluster_ip": "10.254.61.91",
                "cluster_ips": [
                  "10.254.61.91"
                ],
                "health_check_node_port": 0,
                "internal_traffic_policy": "Cluster",
                "ip_families": [
                  "IPv4"
                ],
                "ip_family_policy": "SingleStack",
                "port": [
                  {
                    "name": "prometheus",
                    "node_port": 0,
                    "port": 8181,
                    "protocol": "TCP",
                    "target_port": "8181"
                  }
                ],
                "publish_not_ready_addresses": false,
                "selector": {
                  "app": "wandb"
                },
                "session_affinity": "None",
                "type": "ClusterIP"
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                  }
                ]
              }
            ],
            "wait_for_load_balancer": true
          },
          "dependencies": [
            "data.google_client_config.current",
            "module.wandb.module.app_gke.google_container_cluster.default",
            "module.wandb.module.app_gke.google_container_node_pool.default",
            "module.wandb.module.app_gke.random_pet.node_pool",
            "module.wandb.module.database.google_sql_database.wandb",
            "module.wandb.module.database.google_sql_database_instance.default",
            "module.wandb.module.database.google_sql_user.wandb",
            "module.wandb.module.database.random_pet.mysql",
            "module.wandb.module.database.random_string.master_password",
            "module.wandb.module.kms.google_kms_crypto_key.default",
            "module.wandb.module.kms.google_kms_key_ring.default",
            "module.wandb.module.kms.random_pet.key_ring",
            "module.wandb.module.networking.google_compute_global_address.private_ip_address",
            "module.wandb.module.networking.google_compute_network.vpc",
            "module.wandb.module.networking.google_compute_subnetwork.default",
            "module.wandb.module.networking.google_service_networking_connection.default",
            "module.wandb.module.project_factory_project_services.data.google_compute_default_service_account.default",
            "module.wandb.module.project_factory_project_services.google_project_iam_member.project_service_identity_roles",
            "module.wandb.module.project_factory_project_services.google_project_service.project_services",
            "module.wandb.module.project_factory_project_services.google_project_service_identity.project_service_identities",
            "module.wandb.module.redis.data.google_compute_zones.available",
            "module.wandb.module.redis.google_redis_instance.default",
            "module.wandb.module.service_accounts.google_service_account.main",
            "module.wandb.module.service_accounts.random_id.main",
            "module.wandb.module.storage.module.bucket.google_storage_bucket.file_storage",
            "module.wandb.module.storage.module.bucket.google_storage_bucket_iam_member.object_admin",
            "module.wandb.module.storage.module.bucket.random_pet.file_storage",
            "module.wandb.module.storage.module.pubsub.data.google_client_config.current",
            "module.wandb.module.storage.module.pubsub.data.google_storage_project_service_account.default",
            "module.wandb.module.storage.module.pubsub.google_pubsub_subscription.file_storage",
            "module.wandb.module.storage.module.pubsub.google_pubsub_subscription_iam_member.admin",
            "module.wandb.module.storage.module.pubsub.google_pubsub_topic.file_storage",
            "module.wandb.module.storage.module.pubsub.google_pubsub_topic_iam_member.admin",
            "module.wandb.module.storage.module.pubsub.google_pubsub_topic_iam_member.gcp_publisher",
            "module.wandb.module.storage.module.pubsub.google_storage_notification.file_storage"
          ]
        }
      ]
    },
    {
      "module": "module.wandb.module.gke_app",
      "mode": "managed",
      "type": "kubernetes_service",
      "name": "service",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "id": "default/wandb",
            "metadata": [
              {
                "generation": 0,
                "name": "wandb",
                "namespace": "default",
                "resource_version": "59322",
                "uid": "0598527b-af72-4895-b53a-5568ef75cbab"
              }
            ],
            "spec": [
              {
                "allocate_load_balancer_node_ports": true,
                "cluster_ip": "10.254.48.220",
                "cluster_ips": [
                  "10.254.48.220"
                ],
                "external_traffic_policy": "Cluster",
                "health_check_node_port": 0,
                "internal_traffic_policy": "Cluster",
                "ip_families": [
                  "IPv4"
                ],
                "ip_family_policy": "SingleStack",
                "port": [
                  {
                    "name": "http",
                    "node_port": 32543,
                    "port": 8080,
                    "protocol": "TCP",
                    "target_port": "8080"
                  }
                ],
                "publish_not_ready_addresses": false,
                "selector": {
                  "app": "wandb"
                },
                "session_affinity": "None",
                "type": "NodePort"
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                  }
                ]
              }
            ],
            "wait_for_load_balancer": true
          },
          "dependencies": [
            "data.google_client_config.current",
            "module.wandb.module.app_gke.google_container_cluster.default",
            "module.wandb.module.app_gke.google_container_node_pool.default",
            "module.wandb.module.app_gke.random_pet.node_pool",
            "module.wandb.module.database.google_sql_database.wandb",
            "module.wandb.module.database.google_sql_database_instance.default",
            "module.wandb.module.database.google_sql_user.wandb",
            "module.wandb.module.database.random_pet.mysql",
            "module.wandb.module.database.random_string.master_password",
            "module.wandb.module.kms.google_kms_crypto_key.default",
            "module.wandb.module.kms.google_kms_key_ring.default",
            "module.wandb.module.kms.random_pet.key_ring",
            "module.wandb.module.networking.google_compute_global_address.private_ip_address",
            "module.wandb.module.networking.google_compute_network.vpc",
            "module.wandb.module.networking.google_compute_subnetwork.default",
            "module.wandb.module.networking.google_service_networking_connection.default",
            "module.wandb.module.project_factory_project_services.data.google_compute_default_service_account.default",
            "module.wandb.module.project_factory_project_services.google_project_iam_member.project_service_identity_roles",
            "module.wandb.module.project_factory_project_services.google_project_service.project_services",
            "module.wandb.module.project_factory_project_services.google_project_service_identity.project_service_identities",
            "module.wandb.module.redis.data.google_compute_zones.available",
            "module.wandb.module.redis.google_redis_instance.default",
            "module.wandb.module.service_accounts.google_service_account.main",
            "module.wandb.module.service_accounts.random_id.main",
            "module.wandb.module.storage.module.bucket.google_storage_bucket.file_storage",
            "module.wandb.module.storage.module.bucket.google_storage_bucket_iam_member.object_admin",
            "module.wandb.module.storage.module.bucket.random_pet.file_storage",
            "module.wandb.module.storage.module.pubsub.data.google_client_config.current",
            "module.wandb.module.storage.module.pubsub.data.google_storage_project_service_account.default",
            "module.wandb.module.storage.module.pubsub.google_pubsub_subscription.file_storage",
            "module.wandb.module.storage.module.pubsub.google_pubsub_subscription_iam_member.admin",
            "module.wandb.module.storage.module.pubsub.google_pubsub_topic.file_storage",
            "module.wandb.module.storage.module.pubsub.google_pubsub_topic_iam_member.admin",
            "module.wandb.module.storage.module.pubsub.google_pubsub_topic_iam_member.gcp_publisher",
            "module.wandb.module.storage.module.pubsub.google_storage_notification.file_storage"
          ]
        }
      ]
    },
    {
      "module": "module.wandb.module.networking[0]",
      "mode": "managed",
      "type": "google_compute_global_address",
      "name": "private_ip_address",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "10.38.0.0",
            "address_type": "INTERNAL",
            "creation_timestamp": "2024-07-16T10:04:18.686-07:00",
            "id": "projects/playground-111/global/addresses/abe-andb-private-ip-address",
            "name": "abe-andb-private-ip-address",
            "network": "https://www.googleapis.com/compute/v1/projects/playground-111/global/networks/abe-andb-vpc",
            "prefix_length": 16,
            "project": "playground-111",
            "purpose": "VPC_PEERING",
            "self_link": "https://www.googleapis.com/compute/v1/projects/playground-111/global/addresses/abe-andb-private-ip-address"
          },
          "dependencies": [
            "module.wandb.module.networking.google_compute_network.vpc",
            "module.wandb.module.project_factory_project_services.data.google_compute_default_service_account.default",
            "module.wandb.module.project_factory_project_services.google_project_iam_member.project_service_identity_roles",
            "module.wandb.module.project_factory_project_services.google_project_service.project_services",
            "module.wandb.module.project_factory_project_services.google_project_service_identity.project_service_identities"
          ]
        }
      ]
    },
    {
      "module": "module.wandb.module.networking[0]",
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "description": "Weights \u0026 Biases VPC Network",
            "enable_ula_internal_ipv6": false,
            "id": "projects/playground-111/global/networks/abe-andb-vpc",
            "mtu": 0,
            "name": "abe-andb-vpc",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "project": "playground-111",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/playground-111/global/networks/abe-andb-vpc"
          },
          "dependencies": [
            "module.wandb.module.project_factory_project_services.data.google_compute_default_service_account.default",
            "module.wandb.module.project_factory_project_services.google_project_iam_member.project_service_identity_roles",
            "module.wandb.module.project_factory_project_services.google_project_service.project_services",
            "module.wandb.module.project_factory_project_services.google_project_service_identity.project_service_identities"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.wandb.module.networking[0]",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2024-07-16T10:04:18.861-07:00",
            "gateway_address": "10.10.0.1",
            "id": "projects/playground-111/regions/us-central1/subnetworks/abe-andb-subnet",
            "ip_cidr_range": "10.10.0.0/16",
            "log_config": [
              {
                "aggregation_interval": "INTERVAL_10_MIN",
                "filter_expr": "true",
                "flow_sampling": 0.5,
                "metadata": "INCLUDE_ALL_METADATA"
              }
            ],
            "name": "abe-andb-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/playground-111/global/networks/abe-andb-vpc",
            "private_ip_google_access": true,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "playground-111",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "secondary_ip_range": [
              {
                "ip_cidr_range": "10.0.0.0/14",
                "range_name": "gke-abe-andb-cluster-pods-73dc35d6"
              },
              {
                "ip_cidr_range": "10.254.32.0/19",
                "range_name": "gke-abe-andb-cluster-services-73dc35d6"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/playground-111/regions/us-central1/subnetworks/abe-andb-subnet",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "module.wandb.module.networking.google_compute_network.vpc",
            "module.wandb.module.project_factory_project_services.data.google_compute_default_service_account.default",
            "module.wandb.module.project_factory_project_services.google_project_iam_member.project_service_identity_roles",
            "module.wandb.module.project_factory_project_services.google_project_service.project_services",
            "module.wandb.module.project_factory_project_services.google_project_service_identity.project_service_identities"
          ],
          "create_before_destroy": true
        }
      ]
    }
  ]
}